Fix overflow issue in ByTheCommunity
Addresses #185

--- a/web_modules/ByTheCommunity/index.css
+++ b/web_modules/ByTheCommunity/index.css
@@ -8,6 +8,7 @@
   height: 340px;
   justify-content: center;
   padding: 0 1rem;
+  overflow-x: hidden;
 }
 
 .title {
